--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -3987,7 +3987,7 @@
    "id": "e69fb0d9",
    "metadata": {},
    "source": [
-    "1. Tuple is **ordered and unchangable**.\n",
+    "1. Tuple is **ordered and unchangable(not growable)**.\n",
     "2. **Immutable** (you cant change the element or can't add elements in tuple)\n",
     "3. **()** are used to represent the tuple\n",
     "4. **duplicates allowed**\n",
@@ -5977,7 +5977,7 @@
    "id": "0465cd2f",
    "metadata": {},
    "source": [
-    "1. **frozen set is same as set but it is immutable**\n",
+    "1. **frozen set is same as set but it is immutable & not growable**\n",
     "  > Once a frozenset object is created, **its elements cannot be added or removed**, because frozenset objects are immutable and their elements cannot be modified."
    ]
   },
@@ -6082,7 +6082,7 @@
     "1. stores data in **key-value pair**\n",
     "2. it is **ordered (from python version3.7 dictionaries are ordered)**\n",
     "3. **duplicates are not allowed (keys), but duplicate values are allowed**\n",
-    "4. it is changeable\n",
+    "4. it is changeable/growable\n",
     "5. items are reffered by using key\n",
     "6. { } are used to write dictionaries\n"
    ]
