--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -6194,7 +6194,7 @@
    "id": "381fc3ea",
    "metadata": {},
    "source": [
-    "### Acess"
+    "### Acessing ways of the dictionary "
    ]
   },
   {
@@ -9535,6 +9535,44 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4e383671-a270-49ec-ad41-c45741ebff93",
+   "metadata": {},
+   "source": [
+    "#### local variable and global variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a5bc55fb-b0d8-4203-b09c-dc45131e0d26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "local variable : 2000\n",
+      "Global Variable : 1000\n",
+      "Global variable after the function calling : 1000\n",
+      "Local variable after the function calling : 1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1000 # global variable\n",
+    "def display():\n",
+    "    a = 2000 # local variable\n",
+    "    print('local variable :',a)\n",
+    "    print('Global Variable :',globals()['a'])\n",
+    "\n",
+    "display()\n",
+    "print('Global variable after the function calling :',a)\n",
+    "print('Local variable after the function calling :',a) # if same name will take global variable\n",
+    "# print('Global variable after the function calling :',a) # if different name will through error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "763b7d3d",
    "metadata": {},
    "source": [
@@ -9643,7 +9681,7 @@
    "id": "a95adb86",
    "metadata": {},
    "source": [
-    "#### 2. Argument in function"
+    "#### 2. Required Argument in function"
    ]
   },
   {
@@ -10018,6 +10056,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b3e1e9e8-00d4-424f-97b4-b30091083af6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A: ABHI\n",
+      "B: BABU\n",
+      "C: CAMEL\n",
+      "D: DIGVI\n",
+      "E: EAGLE\n"
+     ]
+    }
+   ],
+   "source": [
+    "def display(**letters):\n",
+    "    for key, value in letters.items():\n",
+    "        print(f\"{key}: {value}\")\n",
+    "\n",
+    "# Call the display function with keyword arguments\n",
+    "display(A='ABHI', B='BABU', C='CAMEL', D='DIGVI', E='EAGLE')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "520451cf",
    "metadata": {},
@@ -10304,7 +10369,7 @@
    "metadata": {},
    "source": [
     "class : \n",
-    "        TE\n",
+    "            TE\n",
     "\n",
     "properties :\n",
     "\n",
@@ -10314,7 +10379,7 @@
     "\n",
     "methods:\n",
     "\n",
-    "        display()\n",
+    "            display()\n",
     "\n",
     "\n",
     "object:\n",
@@ -10338,7 +10403,7 @@
    "metadata": {},
    "source": [
     "class : \n",
-    "        Employee\n",
+    "       Employee\n",
     "\n",
     "properties :\n",
     "            1. id\n",
