--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -10528,6 +10528,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "7db25385-46f9-4d29-8399-6bb710597c2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The name is HARRY, salary is 900000 and role is Instructor\n",
+      "The name is ROHAN, salary is 100000 and role is ML ENGINEER\n",
+      "The name is HARRY, salary is 900000 and role is Instructor\n",
+      "The name is ROHAN, salary is 100000 and role is ML ENGINEER\n"
+     ]
+    }
+   ],
+   "source": [
+    "# self >>\n",
+    "\n",
+    "class Employee:\n",
+    "    no_of_leaves = 10\n",
+    "\n",
+    "    def printdetails(self):\n",
+    "        return f\"The name is {self.name}, salary is {self.salary} and role is {self.role}\"\n",
+    "\n",
+    "harry = Employee()\n",
+    "harry.name = 'HARRY'\n",
+    "harry.salary = 900000\n",
+    "harry.role = 'Instructor'\n",
+    "\n",
+    "rohan = Employee()\n",
+    "rohan.name = 'ROHAN'\n",
+    "rohan.salary = 100000\n",
+    "rohan.role = 'ML ENGINEER'\n",
+    "\n",
+    "print(harry.printdetails())\n",
+    "print(rohan.printdetails())\n",
+    "\n",
+    "# __init__\n",
+    "\n",
+    "class Employee:\n",
+    "    no_of_leaves = 10\n",
+    "    def __init__(self,aname,asalary,arole):\n",
+    "        self.name = aname # instance_name = argument_name\n",
+    "        self.salary = asalary\n",
+    "        self.role = arole\n",
+    "\n",
+    "    def printdetails(self):\n",
+    "        return f\"The name is {self.name}, salary is {self.salary} and role is {self.role}\"\n",
+    "\n",
+    "\n",
+    "harry = Employee('HARRY',900000,'Instructor')\n",
+    "rohan = Employee('ROHAN',100000,'ML ENGINEER')\n",
+    "\n",
+    "print(harry.printdetails())\n",
+    "print(rohan.printdetails())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "b85ab171",
    "metadata": {},
