--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -9499,10 +9499,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9b9cad0a-dd91-4f38-bf14-128887778c9c",
+   "metadata": {},
+   "source": [
+    "# OOP's"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "550d3953",
    "metadata": {},
    "source": [
-    "### Function\n",
+    "## 1. Function\n",
     "\n",
     "Function is a block of statement which will get executed when we call that function (Function is block of code that performs a perticular task)\n",
     "\n",
@@ -10344,7 +10352,7 @@
    "id": "5930de8d",
    "metadata": {},
    "source": [
-    "### Python Class"
+    "## 2. Class & Object"
    ]
   },
   {
@@ -10832,7 +10840,162 @@
    "id": "c8302960",
    "metadata": {},
    "source": [
-    "### Inheritance"
+    "## 3. Inheritance\n",
+    "\n",
+    "> Inheritance meance acquiring the properties of base class from derived class.\n",
+    "> here the concept of inheritance meance acquiring the properties\n",
+    "> > Types of Inheritance\n",
+    "1. Single Inheritance\n",
+    "2. Multiple Inheritance\n",
+    "3. Multilevel Inheritance\n",
+    "4. Hierarchical Inheritance\n",
+    "5. Hybrid Inheritance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2f76ef6a-0759-4837-8527-977523ec159d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Child\n",
+      "PARENT\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Single Inheritance\n",
+    "\n",
+    "class Parent:\n",
+    "    def display(self):\n",
+    "        print('PARENT')\n",
+    "\n",
+    "class Child(Parent):\n",
+    "    def show(self):\n",
+    "        print('Child')\n",
+    "\n",
+    "obj = Child()\n",
+    "obj.show() # Child\n",
+    "obj.display() # Parent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "63a66fb1-e3ce-4059-80ca-e489a47b6154",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Child\n",
+      "Father\n",
+      "Mother\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Multiple Inheritance\n",
+    "\n",
+    "class Father:\n",
+    "    def fdisplay(self):\n",
+    "        print('Father')\n",
+    "\n",
+    "class Mother:\n",
+    "    def mdisplay(self):\n",
+    "        print('Mother')\n",
+    "\n",
+    "class Child(Father, Mother):\n",
+    "    def cdisplay(self):\n",
+    "        print('Child')\n",
+    "\n",
+    "obj= Child()\n",
+    "obj.cdisplay()\n",
+    "obj.fdisplay()\n",
+    "obj.mdisplay()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4259cea2-c94f-43fe-8993-68ea2bf8f2be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grand_Father\n",
+      "Father\n",
+      "Child\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Multilevel Inheritance\n",
+    "\n",
+    "class GrandFather:\n",
+    "    def gdisplay(self):\n",
+    "        print('Grand_Father')\n",
+    "\n",
+    "class Father(GrandFather):\n",
+    "    def fdisplay(self):\n",
+    "        print('Father')\n",
+    "\n",
+    "class Child(Father):\n",
+    "    def cdisplay(self):\n",
+    "        print('Child')\n",
+    "\n",
+    "obj= Child()\n",
+    "obj.gdisplay()\n",
+    "obj.fdisplay()\n",
+    "obj.cdisplay()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c2b88302-badc-4948-a1f9-8734dbd29941",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PARENT\n",
+      "SON 1\n",
+      "PARENT\n",
+      "SON 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. Hierchical Inheritance\n",
+    "\n",
+    "class Parent:\n",
+    "    def pdisplay(self):\n",
+    "        print('PARENT')\n",
+    "\n",
+    "class Child1(Parent):\n",
+    "    def c1display(self):\n",
+    "        print('SON 1')\n",
+    "\n",
+    "class Child2(Parent):\n",
+    "    def c2display(self):\n",
+    "        print('SON 2')\n",
+    "\n",
+    "obj1= Child1()\n",
+    "obj1.pdisplay()\n",
+    "obj1.c1display()\n",
+    "\n",
+    "obj2= Child2()\n",
+    "obj2.pdisplay()\n",
+    "obj2.c2display()"
    ]
   },
   {
@@ -11112,6 +11275,296 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7fcf2d97-80a9-4b52-9032-ecf7b45f0d9e",
+   "metadata": {},
+   "source": [
+    "## 4. Encapsulation\n",
+    "\n",
+    "> Wrapping up data & functions into an single entity\n",
+    "\n",
+    "> Restricting the scope of variables and methods to this peticular class through \"access specifiers\" (method name, variable naame)\n",
+    "\n",
+    "> Access Specifiers :\n",
+    "  >> 1. Public (default) , 2. Private  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0a92f544-023e-4283-9d5e-554c5bba7c88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "Wel-Come\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Public (default)\n",
+    "class Encap:\n",
+    "    a=10\n",
+    "    def display(self):\n",
+    "        print('Wel-Come')\n",
+    "\n",
+    "obj = Encap()\n",
+    "print(obj.a)\n",
+    "obj.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da3bb58f-b0fb-47ec-8835-a15ff2ce0628",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Private\n",
+    "class Encap:\n",
+    "    __a=10\n",
+    "    def __display(self):\n",
+    "        print('Wel-Come')\n",
+    "\n",
+    "obj = Encap()\n",
+    "print(obj.a) # AttributeError: 'Encap' object has no attribute 'a'\n",
+    "obj.display() # AttributeError: 'Encap' object has no attribute 'display'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0284cd4-2494-4e43-be98-af0f008f1d09",
+   "metadata": {},
+   "source": [
+    "## 5. Abstarct Class & Abstract Method\n",
+    "\n",
+    "> Abstract meance hiding the something i.e hiding the actual implementation and showing the essential part\n",
+    "\n",
+    "##### Abstarct Method : The method in which having only declaration but not he defination is called *abstarct method*\n",
+    "\n",
+    "##### Abstarct Class : If any class having abstarct methods then that class will automatically as abstarct class.\n",
+    "\n",
+    "##### Concrete Class : The class without any abstarct methods\n",
+    "\n",
+    "## Note : Object can't be created for aabstarct class, the object can only be created for concrete class\n",
+    "> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "75075a30-dca3-420f-9154-78cee9e85e4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABSTRACT METHOD\n"
+     ]
+    }
+   ],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class AbstractDemo(ABC):\n",
+    "    @ abstractmethod\n",
+    "    def display(self):\n",
+    "        None\n",
+    "\n",
+    "class Demo(AbstractDemo):\n",
+    "    def display(self):\n",
+    "        print(\"ABSTRACT METHOD\")\n",
+    "\n",
+    "# HERE WE CANT CREATE OBJECT FOR ABSTRACTCLASS BUT WE CAN CREATE OBJECT FOR CONCRETE CLASS\n",
+    "\n",
+    "obj = Demo()\n",
+    "obj.display() # display method is overwriten in concrete class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "3ad9352e-9d15-416d-addd-a835b339e968",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class Shape(ABC):\n",
+    "    @abstractmethod\n",
+    "    def print_area(self):\n",
+    "        return 0\n",
+    "\n",
+    "class Reactangle(Shape):\n",
+    "    def __init__(self,asize,abreadth):\n",
+    "        self.size = asize\n",
+    "        self.breadth = abreadth\n",
+    "\n",
+    "    def print_area(self):\n",
+    "        return self.size * self.breadth\n",
+    "\n",
+    "obj = Reactangle(6,7)\n",
+    "print(obj.print_area()) \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d72a372-a527-46d5-98a3-39805fbf38ae",
+   "metadata": {},
+   "source": [
+    "## 6. Polymorphisam\n",
+    "\n",
+    "> Polymorphisam meance implementing same thing in different way, e.g one person doing different work\n",
+    "> Two Types\n",
+    ">> 1. Overloading Method\n",
+    "\n",
+    ">> 2. Overriding Method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "26284dd6-7446-4467-9b82-ee683b262058",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None None\n",
+      "10 None\n",
+      "100 200\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Overloading Method\n",
+    "\n",
+    "class moverload:\n",
+    "    def display11(self,a=None,b=None):\n",
+    "        print(a,b)\n",
+    "\n",
+    "obj = moverload()\n",
+    "obj.display11()\n",
+    "obj.display11(10,)\n",
+    "obj.display11(100,200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "1d9496cb-b46b-4df2-ac24-6046cc27cf12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CYCLE\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Overriding Method\n",
+    "\n",
+    "class Father:\n",
+    "    def Transfortation(self):\n",
+    "        print('CYCLE')\n",
+    "\n",
+    "obj=Father()\n",
+    "obj.Transfortation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "b82eb64e-a2c3-49f5-9047-85036f0e1172",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BIKE\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Son:\n",
+    "    def Transfortation(self):\n",
+    "        print('BIKE')\n",
+    "\n",
+    "obj=Son()\n",
+    "obj.Transfortation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "c1ead684-de09-4f42-b042-344bd8c7aa24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CYCLE\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Father:\n",
+    "    def Transfortation(self):\n",
+    "        print('CYCLE')\n",
+    "\n",
+    "class Son(Father):\n",
+    "    pass\n",
+    "\n",
+    "obj = Son()\n",
+    "obj.Transfortation() # son overides the cycle to bike"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "b6be2f0b-cc50-4fc7-82ba-97d515954dc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BIKE\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Father:\n",
+    "    def Transfortation(self):\n",
+    "        print('CYCLE')\n",
+    "\n",
+    "class Son(Father):\n",
+    "    def Transfortation(self):\n",
+    "        print('BIKE')\n",
+    "\n",
+    "obj = Son()\n",
+    "obj.Transfortation() # Son overides the cycle to bike"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "984a3bc6",
    "metadata": {},
    "source": [
@@ -11158,7 +11611,6 @@
     "tup = (10,20,30,40,50)\n",
     "\n",
     "print(type(tup))\n",
-    "\n",
     "itr = iter(tup) # create an iterator object\n",
     "\n",
     "print(next(itr))\n",
@@ -11365,7 +11817,6 @@
     "    print('local variable inside function :',x)\n",
     "    \n",
     "my_function()\n",
-    "\n",
     "print('Local variable outside the function : Not possible because \"NameError: name x is not defined \"')"
    ]
   },
@@ -11416,7 +11867,6 @@
    ],
    "source": [
     "# Example of global variable (defined inside the function)\n",
-    "\n",
     "def my_function2():\n",
     "    global x\n",
     "    x = 9000\n",
@@ -11458,10 +11908,10 @@
     "    \n",
     "    def Display_z():\n",
     "        print(z)\n",
+    "        \n",
     "    z = 10 # local variable\n",
     "    print(z)\n",
     "    Display_z()\n",
-    "    \n",
     "    \n",
     "def Display():\n",
     "    print(\"Printing Outside scope\",z)\n",
@@ -11518,8 +11968,7 @@
     "display()\n",
     "print('Outside Display Function :')\n",
     "print(d)\n",
-    "print(e)\n",
-    "    "
+    "print(e)"
    ]
   },
   {
