--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -11787,7 +11787,7 @@
    "id": "dcc2b61c",
    "metadata": {},
    "source": [
-    "Types of variables are :\n",
+    "##### Types of variables are :\n",
     "                        \n",
     "    1. Local Variable : A local variable is a variable that is declared inside a function or a block of code. It can only be accessed within that function or block of code and is destroyed when the function or block of code ends. Local variables are useful when you only need to use the variable within a specific part of the program and don't want to clutter up the rest of the code.\n",
     "                       \n",
@@ -12449,7 +12449,7 @@
     }
    ],
    "source": [
-    "# well-known mathematical constant called \"Euler's number\" or \"Euler's constant\" denoted by the symbol \"e\". It is a mathematical constant approximately equal to 2.71828, \n",
+    "# well-known mathematicall constant called \"Euler's number\" or \"Euler's constant\" denoted by the symbol \"e\". It is a mathematical constant approximately equal to 2.71828, \n",
     "eluers_no = math.e\n",
     "print(eluers_no)"
    ]
