--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -13011,13 +13011,58 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "7d3cde84",
+   "cell_type": "markdown",
+   "id": "50b050ab-77a5-4157-97b0-62682545f514",
    "metadata": {},
    "source": [
     "RE is a special sequence of characters which helps you to match or find other patterns in a string, using special syntax\n",
     "\n",
     "python has re module which gives way to work with regEx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f37a65d9-278c-4c26-8a6e-75af5ba1f89f",
+   "metadata": {},
+   "source": [
+    "### Most commonly used special characters in regex:\n",
+    "\n",
+    "    \".\" (dot) - Matches any single character except for a newline character.\n",
+    "    \"^\"       - Matches the start of a string.\n",
+    "    \"$\"       - Matches the end of a string.\n",
+    "    \"|\"       - Matches either the pattern before or after the pipe character.\n",
+    "    \"+\"       - Matches one or more of the preceding pattern.\n",
+    "    \"*\"       - Matches zero or more of the preceding pattern.\n",
+    "    \"?\"       - Matches zero or one of the preceding pattern.\n",
+    "    \"[]\"      - Matches any character within the brackets.\n",
+    "    \"[^ ]\"    - Matches any character not within the brackets.\n",
+    "    \"\\d\"      - Matches any digit (0-9).\n",
+    "    \"\\s\"      - Matches any whitespace character.\n",
+    "    \"\\w\"      - Matches any word character (a-z, A-Z, 0-9, and underscore).\n",
+    "\n",
+    "    \\A\t      - Returns a match if the specified characters are at the beginning of the string\t\n",
+    "                Example : \"\\AThe\"\t\n",
+    "    \\b\t      - Returns a match where the specified characters are at the beginning or at the end of a word \n",
+    "                (the \"r\" in the beginning is making sure that the string is being treated as a \"raw string\")\t\n",
+    "                Example : r\"\\bain\", r\"ain\\b\"\t\n",
+    "    \\B\t      - Returns a match where the specified characters are present, but NOT at the beginning \n",
+    "                (or at the end) of a word (the \"r\" in the beginning is making sure that the string is being treated as a \"raw string\")\t\n",
+    "                Example : r\"\\Bain\", r\"ain\\B\"\t\n",
+    "    \\d\t      - Returns a match where the string contains digits (numbers from 0-9)\n",
+    "                Example : \"\\d\"\t\n",
+    "    \\D\t      - Returns a match where the string DOES NOT contain digits \n",
+    "                Example : \"\\D\"\t\n",
+    "    \\s\t      - Returns a match where the string contains a white space character \n",
+    "                Example : \"\\s\"\t\n",
+    "    \\S\t      - Returns a match where the string DOES NOT contain a white space character \n",
+    "                Example : \"\\S\"\t\n",
+    "    \\w\t      - Returns a match where the string contains any word characters \n",
+    "                (characters from a to Z, digits from 0-9, and the underscore _ character) \n",
+    "                Example : \"\\w\"\t\n",
+    "    \\W\t      - Returns a match where the string DOES NOT contain any word characters \n",
+    "                Example : \"\\W\"\t\n",
+    "    \\Z\t      - Returns a match if the specified characters are at the end of the string \n",
+    "                Example : \"Spain\\Z\""
    ]
   },
   {
@@ -13199,6 +13244,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac09eaa5-7896-4ed4-a703-47f8174d7051",
+   "metadata": {},
+   "source": [
+    "#### 1. re.findall function \n",
+    "> This function returns the list of all matches"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 164,
    "id": "741e5a94",
@@ -13213,8 +13267,6 @@
     }
    ],
    "source": [
-    "# findall function returns the list of all matches\n",
-    "\n",
     "txt = \"The python programming was developed in 1991 by Guido Van Rossom\"\n",
     "\n",
     "x = re.findall(\"r\",txt)\n",
@@ -13272,6 +13324,34 @@
     "    return count\n",
     "\n",
     "count_char()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e302af5e-6e15-4737-9a28-1574d7026cac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def lenth_of_ele_list(lst,txt):\n",
+    "    import re\n",
+    "    cnt = []\n",
+    "    for i in lst:\n",
+    "        x = re.findall(i, txt)\n",
+    "        cnt.append(len(x))\n",
+    "    return cnt\n",
+    "\n",
+    "print(lenth_of_ele_list(['The', 'is', 'Mohite'],\"My name is The Digvijay Mohite\"))"
    ]
   },
   {
@@ -13442,44 +13522,6 @@
     "print(x.end())\n",
     "print(x.string)\n",
     "print(x.group())"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "0e7518d5",
-   "metadata": {},
-   "source": [
-    "most commonly used special characters in regex:\n",
-    "\n",
-    "\".\" (dot) - Matches any single character except for a newline character.\n",
-    "\"^\"       - Matches the start of a string.\n",
-    "\"$\"       - Matches the end of a string.\n",
-    "\"|\"       - Matches either the pattern before or after the pipe character.\n",
-    "\"+\"       - Matches one or more of the preceding pattern.\n",
-    "\"*\"       - Matches zero or more of the preceding pattern.\n",
-    "\"?\"       - Matches zero or one of the preceding pattern.\n",
-    "\"[]\"      - Matches any character within the brackets.\n",
-    "\"[^ ]\"    - Matches any character not within the brackets.\n",
-    "\"\\d\"      - Matches any digit (0-9).\n",
-    "\"\\s\"      - Matches any whitespace character.\n",
-    "\"\\w\"      - Matches any word character (a-z, A-Z, 0-9, and underscore)."
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "b2b3f201",
-   "metadata": {},
-   "source": [
-    "\\A\t      - Returns a match if the specified characters are at the beginning of the string\tExample : \"\\AThe\"\t\n",
-    "\\b\t      - Returns a match where the specified characters are at the beginning or at the end of a    word (the \"r\" in the beginning is making sure that the string is being treated as a \"raw string\")\tExample : r\"\\bain\", r\"ain\\b\"\t\n",
-    "\\B\t      - Returns a match where the specified characters are present, but NOT at the beginning (or at the end) of a word (the \"r\" in the beginning is making sure that the string is being treated as a \"raw string\")\tExample : r\"\\Bain\", r\"ain\\B\"\t\n",
-    "\\d\t      - Returns a match where the string contains digits (numbers from 0-9)\tExample : \"\\d\"\t\n",
-    "\\D\t      - Returns a match where the string DOES NOT contain digits Example : \"\\D\"\t\n",
-    "\\s\t      - Returns a match where the string contains a white space character Example : \"\\s\"\t\n",
-    "\\S\t      - Returns a match where the string DOES NOT contain a white space character Example : \"\\S\"\t\n",
-    "\\w\t      - Returns a match where the string contains any word characters (characters from a to Z, digits from 0-9, and the underscore _ character) Example : \"\\w\"\t\n",
-    "\\W\t      - Returns a match where the string DOES NOT contain any word characters Example : \"\\W\"\t\n",
-    "\\Z\t      - Returns a match if the specified characters are at the end of the string Example : \"Spain\\Z\""
    ]
   },
   {
