--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -13296,7 +13296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 6,
    "id": "651446dd",
    "metadata": {},
    "outputs": [
@@ -13306,7 +13306,7 @@
        "[1, 6, 1]"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13328,35 +13328,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "e302af5e-6e15-4737-9a28-1574d7026cac",
+   "execution_count": 8,
+   "id": "297154f6-4050-47d8-b638-0b58af4ea067",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 1, 1]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 1, 1]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import re\n",
-    "\n",
-    "def lenth_of_ele_list(lst,txt):\n",
+    "def lenth_of_ele_list():\n",
+    "    count = []\n",
     "    import re\n",
-    "    cnt = []\n",
+    "    lst = ['The', 'is', 'Mohite']\n",
+    "    txt = \"My name is The Digvijay Mohite\"\n",
     "    for i in lst:\n",
-    "        x = re.findall(i, txt)\n",
-    "        cnt.append(len(x))\n",
-    "    return cnt\n",
+    "        cnt = re.findall(i, txt)\n",
+    "        count.append(len(cnt))\n",
+    "    return count\n",
     "\n",
-    "print(lenth_of_ele_list(['The', 'is', 'Mohite'],\"My name is The Digvijay Mohite\"))"
+    "lenth_of_ele_list()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 9,
+   "id": "e302af5e-6e15-4737-9a28-1574d7026cac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 1]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def lenth_of_ele_list(lst,txt):\n",
+    "    count = []\n",
+    "    import re\n",
+    "    for i in lst:\n",
+    "        cnt = re.findall(i, txt)\n",
+    "        count.append(len(cnt))\n",
+    "    return count\n",
+    "\n",
+    "lenth_of_ele_list(['The', 'i', 'Mohite'],\"My name is The Digvijay Mohite\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d68bd6d-6015-4ea1-bcba-b9151c5f2a46",
+   "metadata": {},
+   "source": [
+    "#### 2. re.search() function\n",
+    "> search returns the first occurance of the match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "10a762ec",
    "metadata": {},
    "outputs": [
@@ -13370,10 +13411,7 @@
     }
    ],
    "source": [
-    "# search function\n",
-    "\n",
-    "# search returns the first occurance of the match\n",
-    "\n",
+    "import re\n",
     "txt = \"The python proramming\"\n",
     "x = re.search(\"\\s\", txt)\n",
     "print(\"object :>\",x)\n",
@@ -13433,6 +13471,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "804336e8-6ffd-4eef-b548-ace13182bfb7",
+   "metadata": {},
+   "source": [
+    "#### 3. re.split()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 199,
    "id": "1a79ee75",
@@ -13472,6 +13518,14 @@
     "txt = \"The python programming was devloped in 1991\"\n",
     "x = re.split(\"\",txt,10)\n",
     "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2013fe26-39e2-425c-b095-d2cceb521b51",
+   "metadata": {},
+   "source": [
+    "#### 4. re.sub() function"
    ]
   },
   {
@@ -13621,7 +13675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 1,
    "id": "517bf256",
    "metadata": {},
    "outputs": [
