--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -1142,9 +1142,9 @@
     "print('complex to bool :',z)\n",
     "zz=bool(4+2j)\n",
     "print('complex to bool :',zz)\n",
-    "zzz=bool(0+0j)\n",
+    "zzz=bool(0+0j) # at least one value should be required\n",
     "print('complex to bool :',zzz)\n",
-    "zzzz=bool(0+2j) # at least one value should be there\n",
+    "zzzz=bool(0+2j) \n",
     "print('complex to bool :',zzzz)\n",
     "print('*'*100)"
    ]
@@ -14461,7 +14461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
