--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -2781,7 +2781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "8b2af2c2",
    "metadata": {},
    "outputs": [
@@ -2789,15 +2789,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140726035672968\n",
+      "140732860264328\n",
       "and \n",
-      " 140726035672968\n",
+      " 140732860264328\n",
       "True\n",
       "****************************************************************************************************\n",
-      "2236169116240\n",
+      "2036256091408\n",
       "and \n",
-      " 2236169123984\n",
-      "2236169124208\n",
+      " 2036256090768\n",
+      "2036256087728\n",
       "False\n"
      ]
     }
@@ -3791,6 +3791,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "a2f4b1e9-6218-4d6e-881f-209d3644e899",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['(1+2j)', '-110', '0', '10', '10.1', '1000', 'A', 'A', 'B', 'B', 'C', 'C']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lst.sort(*, key=None, reverse=False)\n",
+    "lst = ['C', 'B', 'A', 'C', 'B', 'A', 0, -110, (1+2j), '1000', 10.1, 10]\n",
+    "lst =sorted(map(str,lst))\n",
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 69,
    "id": "c884d0b6",
    "metadata": {},
@@ -3909,7 +3933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "b5b3b83a",
    "metadata": {},
    "outputs": [
@@ -3931,7 +3955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "4344c1da",
    "metadata": {},
    "outputs": [
@@ -3945,7 +3969,7 @@
     }
    ],
    "source": [
-    "# misbahaviour of list\n",
+    "# look like misbahaviour but actually we are given index 2:end so all other elements are removed\n",
     "list21=[1,2,3,4,5,6,7,8,9]\n",
     "list21[2:]=[22,33,44] # after modifying remaining elements will be lost\n",
     "print(list21)\n",
@@ -5108,7 +5132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 9,
    "id": "b0e29cdd",
    "metadata": {},
    "outputs": [
@@ -5116,16 +5140,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "applebananacherry\n"
+      "apple-banana-cherry\n"
      ]
     }
    ],
    "source": [
     "def fruits(a,b,c):\n",
-    "    return a+b+c\n",
+    "    return a+'-'+b+'-'+c\n",
     "\n",
     "market=fruits('apple','banana','cherry')\n",
     "print(market)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6c39f638-0f69-49a4-902c-0aee3464270d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'applebananacherry'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food = ('apple','banana','cherry')\n",
+    "fruits(*food)"
    ]
   },
   {
