--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -5581,7 +5581,7 @@
     }
    ],
    "source": [
-    "# pop() method >> Remove and return an arbitrary(randomly) set element is set is empty pop() will create an error\n",
+    "# pop() method >> Remove and return an arbitrary(randomly) set element, set is empty pop() will create an error\n",
     "set1.pop()\n",
     "print(set1)"
    ]
@@ -14507,7 +14507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
