--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -7112,7 +7112,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 1,
+   "id": "68ea9701",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "company = {\n",
+    "   \"sales\": [\n",
+    "     {\"name\": \"John\"},\n",
+    "     {\"name\": \"Ana\"}\n",
+    "    ],\n",
+    "   \"development\": [\n",
+    "     {\"name\": \"Chris\"},\n",
+    "     {\"name\": \"Ann\"}\n",
+    "   ]\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9ad15497",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sales': [{'name': 'John'}, {'name': 'Ana'}],\n",
+       " 'development': [{'name': 'Chris'}, {'name': 'Ann'}]}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "company"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "946dfddd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Ann'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "company['development'][1]['name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "78a7c7cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('John', 'Ana')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "company['sales'][0]['name'],company['sales'][1]['name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "71f88b07",
    "metadata": {},
    "outputs": [
@@ -7120,7 +7203,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'f_key': {'p_key': {'s_key': {'g_name': 'grans_son_name'}, 's_name': 'son_name'}, 'p_name': 'Parent_name'}}\n"
+      "{'f_key': {'p_key': {'s_key': {'gs_key': 'grans_son_name'}, 's_name': 'son_name'}, 'p_name': 'Parent_name'}}\n"
      ]
     }
    ],
@@ -7151,7 +7234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 25,
    "id": "4363413a",
    "metadata": {},
    "outputs": [
@@ -7161,13 +7244,34 @@
        "'Parent_name'"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "family['f_key']['p_name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "616d839d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'grans_son_name'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "family['f_key']['p_key']['s_key']['gs_key']"
    ]
   },
   {
