--- a/Rough_book_for_practice.ipynb
+++ b/Rough_book_for_practice.ipynb
@@ -1965,8 +1965,958 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "31c83bf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 33, 3, 4, 5, 2, 11, 12, 55} <class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = {1,1,1,12,3,4,4,5,5,5,33,2,2,11,4,55,}\n",
+    "print(set1,type(set1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1c0cb54e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frozenset({1, 33, 3, 4, 5, 2, 11, 12, 55}) <class 'frozenset'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fset=frozenset(set1)\n",
+    "print(fset, type(fset))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2a523ae7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fset.add('Mohite') >> we cant modify once frozenset has been created"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "111193be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{frozenset({'banana', 'apple', 'orange'}): {'in_stock': True, 'quantity': 10}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define a frozenset\n",
+    "fruits = frozenset({'apple', 'banana', 'orange'}) \n",
+    "\n",
+    "# Create a dictionary with frozenset key\n",
+    "inventory = {\n",
+    "        fruits: {\n",
+    "            'in_stock': True, \n",
+    "            'quantity': 10\n",
+    "                }\n",
+    "            }\n",
+    "\n",
+    "print(inventory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "13ecf539",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{frozenset({'u', 'e', 'a', 'i', 'o'}): '10, 20 , 30, 40, 50'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "vowels = frozenset({'a','e','i','o','u'})\n",
+    "\n",
+    "d = {vowels : \"10, 20 , 30, 40, 50\"}\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c49fa33a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KEY : frozenset({'u', 'e', 'a', 'i', 'o'})\n",
+      "Values : 10, 20 , 30, 40, 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in d:\n",
+    "    print(\"KEY :\",key)\n",
+    "    print(\"Values :\",d[key])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f24b557f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "d32fbd98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {'D' :'DIGVIJAY',\n",
+    "     'Sc' : 'SACHIN',\n",
+    "     'A' : 'ABHIMANYU',\n",
+    "     'S' : 'SHOURYA'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "1eb90708",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'D': 'DIGVIJAY', 'Sc': 'SACHIN', 'A': 'ABHIMANYU', 'S': 'SHOURYA'} <class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d, type(d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "987e13b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('DIGVIJAY', 'SACHIN', 'ABHIMANYU', 'SHOURYA')"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d['D'], d['Sc'], d['A'], d['S'] # by using mention the direct key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "f1bcb1e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('DIGVIJAY', 'SACHIN')"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.get('D'), d.get('Sc') # by using get method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "a04834dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d.get(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "fd3a5be9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['D', 'Sc', 'A', 'S'])\n",
+      "dict_values(['DIGVIJAY', 'SACHIN', 'ABHIMANYU', 'SHOURYA'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# by using notation like .keys and .values\n",
+    "print(d.keys())\n",
+    "print(d.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "cde9112a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('D', 'DIGVIJAY'), ('Sc', 'SACHIN'), ('A', 'ABHIMANYU'), ('S', 'SHOURYA')])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# by using .items\n",
+    "d.items()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "cba2bec3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# update the dictionary\n",
+    "d.update({'So':'SOPAN','M':'MOHITE'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "999773c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'D': 'DIGVIJAY', 'Sc': 'SACHIN', 'A': 'ABHIMANYU', 'S': 'SHOURYA', 'So': 'SOPAN', 'M': 'MOHITE'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "6495d1da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'MOHITE'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.pop('M')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "d33d4963",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'D': 'DIGVIJAY',\n",
+       " 'Sc': 'SACHIN',\n",
+       " 'A': 'ABHIMANYU',\n",
+       " 'S': 'SHOURYA',\n",
+       " 'So': 'SOPAN'}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "32c74de3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('So', 'SOPAN')"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.popitem()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "5e5b5702",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'D': 'DIGVIJAY', 'Sc': 'SACHIN', 'A': 'ABHIMANYU', 'S': 'SHOURYA'}"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "ee788c48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dd=d.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "a95dc66b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'D': 'DIGVIJAY', 'Sc': 'SACHIN', 'A': 'ABHIMANYU', 'S': 'SHOURYA'}"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "30128177",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ddd=d.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "75eae7cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'D': 'DIGVIJAY', 'Sc': 'SACHIN', 'A': 'ABHIMANYU', 'S': 'SHOURYA'}"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ddd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "ffeb392a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del dd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "86b7ff1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ddd.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "3059f8dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ddd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "facfbc3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'D': 'DIGVIJAY', 'Sc': 'SACHIN', 'A': 'ABHIMANYU', 'S': 'SHOURYA'}"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "519d4799",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d['D']='DIPAK'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "8bcaecf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'D': 'DIPAK', 'Sc': 'SACHIN', 'A': 'ABHIMANYU', 'S': 'SHOURYA'}"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "ff5b16a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'D': 'DIPAK', 'Sc': 'SACHIN', 'A': 'ABHIMANYU', 'S': 'SHOURYA'}\n",
+      "{'D': 'DIPAK', 'Sc': 'SACHIN', 'A': 'ABHIMANYU', 'S': 'SHOURYA'}\n",
+      "{'D': 'DIPAK', 'Sc': 'SACHIN', 'A': 'ABHIMANYU', 'S': 'SHOURYA', 'J': 'JAGDALE'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dd = d.copy()\n",
+    "print(d)\n",
+    "print(dd)\n",
+    "dd['J']='JAGDALE'\n",
+    "print(dd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "7c1b8075",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'D': 'DIPAK', 'Sc': 'SACHIN', 'A': 'ABHIMANYU', 'S': 'SHOURYA', 'J': 'JAGDALE'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ddd = dict(dd)\n",
+    "print(ddd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "e16172ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'D': 'JAY HO...!', 'Sc': 'JAY HO...!', 'A': 'JAY HO...!', 'S': 'JAY HO...!', 'J': 'JAY HO...!'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dict.fromkeys(ddd,'JAY HO...!'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "f5c62abe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'D': 'GOT SUCCESS',\n",
+       " 'Sc': 'GOT SUCCESS',\n",
+       " 'A': 'GOT SUCCESS',\n",
+       " 'S': 'GOT SUCCESS',\n",
+       " 'J': 'GOT SUCCESS'}"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict.fromkeys(ddd,'GOT SUCCESS')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "85af857e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'D': 'DIPAK', 'Sc': 'SACHIN', 'A': 'ABHIMANYU', 'S': 'SHOURYA'}"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "ede3914e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'MOHITE'"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.setdefault('SURNAME','MOHITE')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "6f475329",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'D': 'DIPAK',\n",
+       " 'Sc': 'SACHIN',\n",
+       " 'A': 'ABHIMANYU',\n",
+       " 'S': 'SHOURYA',\n",
+       " 'SURNAME': 'MOHITE'}"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "953e60d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'MOHITE'"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.setdefault('SURNAME')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "d8416342",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'F_name': 'DIGVIJAY'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict1 = {}\n",
+    "dict1.setdefault('F_name','DIGVIJAY')\n",
+    "print(dict1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "8a9c9adf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nested dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "ca284ae9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Dipak': {'Age': 10, 'Loc': 'Mumbai'}, 'Digvijay': {'Age': 11, 'Loc': 'Pune'}}"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stud = {\n",
+    "    \"Dipak\": {'Age':10, 'Loc':'Mumbai'},\n",
+    "    \"Digvijay\":{'Age':11, 'Loc':'Pune'}\n",
+    "    }\n",
+    "\n",
+    "stud"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "2c75c246",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Mumbai'"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stud['Dipak']['Loc']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "971615ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "company = {\n",
+    "   \"sales\": [\n",
+    "     {\"name\": \"John\"},\n",
+    "     {\"name\": \"Ana\"}\n",
+    "    ],\n",
+    "   \"development\": [\n",
+    "     {\"name\": \"Chris\"},\n",
+    "     {\"name\": \"Ann\"}\n",
+    "   ]\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "2cf77701",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sales': [{'name': 'John'}, {'name': 'Ana'}],\n",
+       " 'development': [{'name': 'Chris'}, {'name': 'Ann'}]}"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "company"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "a4a81aad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Ana'"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "company['sales'][1]['name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "b6e6faa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'f_key': {'p_key': {'s_key': {'gs_key': 'grans_son_name'}, 's_name': 'son_name'}, 'p_name': 'Parent_name'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "grandson = {\n",
+    "    'gs_key':'grans_son_name'\n",
+    "}\n",
+    "\n",
+    "\n",
+    "son = {\n",
+    "    's_key' : grandson,\n",
+    "    's_name': 'son_name'\n",
+    "}\n",
+    "\n",
+    "\n",
+    "parent = {\n",
+    "    'p_key':son,\n",
+    "    'p_name':'Parent_name'\n",
+    "}\n",
+    "\n",
+    "\n",
+    "family ={\n",
+    "    'f_key':parent,\n",
+    "}\n",
+    "\n",
+    "print(family)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "2ab0e38a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Parent_name'"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "family['f_key']['p_name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "d9346ba8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'grans_son_name'"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "family['f_key']['p_key']['s_key']['gs_key']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "41678e2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'son_name'"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "family['f_key']['p_key']['s_name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8b767c5",
    "metadata": {},
    "outputs": [],
    "source": []
