--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -8824,7 +8824,15 @@
     "    i = 0\n",
     "    while i < 5:\n",
     "        print(i)\n",
-    "        i += 1\n"
+    "        i += 1\n",
+    "\n",
+    "    Some common applications are:\n",
+    "    \n",
+    "    1. Iterating over sequences like lists, strings\n",
+    "    2. Reading lines from files\n",
+    "    3. User input validation\n",
+    "    4. Game loops\n",
+    "    5. Repeating tasks until condition is false"
    ]
   },
   {
@@ -9422,7 +9430,8 @@
     "### range \n",
     "\n",
     "The range() function in Python is used to generate a sequence of numbers within a specified range. The function takes up to three arguments:\n",
-    "range(start, stop, step)"
+    "\n",
+    "    range(start, stop, step)"
    ]
   },
   {
