--- a/Rough_book_for_practice.ipynb
+++ b/Rough_book_for_practice.ipynb
@@ -2915,8 +2915,917 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f8b767c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# arithmatic operators\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "02edff6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=15\n",
+    "b=2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "00600788",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17, 13, 7.5, 7, 1, 30, 225)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Arithmatic Opeartors\n",
+    "a+b, a-b, a/b, a//b, a%b, a*b, a**b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "2c97e0d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assignment Opeartors\n",
+    "a=10\n",
+    "a+=5\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "0fa88031",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=2\n",
+    "x**=3\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "2261a35d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n1=10\n",
+    "n2=20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "572acfa1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n1<=10 and n2>=10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "9d54fa20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n1>4 or n2<4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "3db703bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not(n1>4 or n2<4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "62241571",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=10\n",
+    "y=9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "6b7b2ca4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x is y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "9799782c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x is not y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "9c47d2d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=100\n",
+    "y=900"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "fb568845",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is not greather than y.....!\n"
+     ]
+    }
+   ],
+   "source": [
+    "if x>y:\n",
+    "    print('x is greater than y........!')\n",
+    "else:\n",
+    "    print('x is not greather than y.....!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "a3952cfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x<y\n"
+     ]
+    }
+   ],
+   "source": [
+    "if x>y:\n",
+    "    print('x>y')\n",
+    "elif x<y:\n",
+    "    print('x<y')\n",
+    "elif x==y:\n",
+    "    print('x=y')\n",
+    "else:\n",
+    "    print('other')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "352e2402",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the total marks :60\n",
+      "SECOND CLASS\n"
+     ]
+    }
+   ],
+   "source": [
+    "marks = float(input('Enter the total marks :'))\n",
+    "\n",
+    "if marks<=34:\n",
+    "    print(\"FAIL\")\n",
+    "elif marks>35 and marks<=45:\n",
+    "    print(\"PASS\")\n",
+    "elif marks>45 and marks<=60:\n",
+    "    print(\"SECOND CLASS\")\n",
+    "elif marks>60 and marks<=75:\n",
+    "    print('FIRST CLASS')\n",
+    "else:\n",
+    "    print('DISTINCTION')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "fb64703d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y is greater\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10000\n",
+    "y = 20000\n",
+    "\n",
+    "print(\"x is greater\") if x > y else print(\"y is greater\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "5e469bb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the total marks :36\n",
+      "DISTINCTION\n"
+     ]
+    }
+   ],
+   "source": [
+    "marks = float(input('Enter the total marks :'))\n",
+    "\n",
+    "print('FAIL') if marks<35 else print('DISTINCTION')                                                                                            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "45cb97c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x < 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=9\n",
+    "\n",
+    "if x>100:\n",
+    "    if x==400:\n",
+    "        print('X:400')\n",
+    "    else:\n",
+    "        print('X >100')\n",
+    "elif x<100:\n",
+    "    print('x < 100')\n",
+    "else:\n",
+    "    print('Other')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "3ee61e6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 1\n",
+    "\n",
+    "while count < 11:\n",
+    "    print(count)\n",
+    "    count+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "4dae1912",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mango\n",
+      "cherry\n",
+      "papaya\n",
+      "bluberry\n",
+      "apple\n",
+      "banana\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [\"mango\",\"cherry\",\"papaya\",\"bluberry\",\"apple\",\"banana\"]\n",
+    "\n",
+    "x=0\n",
+    "while x < len(list1):\n",
+    "    print(list1[x])\n",
+    "    x+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "0513a873",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mango\n",
+      "cherry\n",
+      "papaya\n",
+      "bluberry\n",
+      "apple\n",
+      "banana\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in list1:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "fdda9419",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list1 = [\"mango\",\"cherry\",\"papaya\",\"bluberry\",\"apple\",\"banana\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "43588982",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List Elements : ['mango', 'cherry', 'papaya', 'bluberry', 'apple', 'banana']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"List Elements :\",list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "f737bb4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mango\n",
+      "cherry\n",
+      "papaya\n",
+      "bluberry\n",
+      "apple\n",
+      "banana\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in list1:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "63930cae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tup=(\"RAM\", 'KRISHNA', 'HARI', 'VITTHAL')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "c03e4c6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RAM\n",
+      "KRISHNA\n",
+      "HARI\n",
+      "VITTHAL\n"
+     ]
+    }
+   ],
+   "source": [
+    "index=0\n",
+    "while index< len(tup):\n",
+    "    print(tup[index])\n",
+    "    index+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "d0a7e6bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "count=0\n",
+    "while count<11:\n",
+    "    print(count)\n",
+    "    count+=1\n",
+    "#     count = count+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "5c22b1bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter positive number: 6\n",
+      "Enter positive number: 8\n",
+      "Enter positive number: 9\n",
+      "Enter positive number: 4\n",
+      "Enter positive number: 3\n",
+      "Enter positive number: 2\n",
+      "Enter positive number: 1\n",
+      "Enter positive number: -1\n",
+      "Enter positive number: 10\n",
+      "Enter positive number: 11\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 0 \n",
+    "while number <= 10:\n",
+    "    number = int(input(\"Enter positive number: \"))\n",
+    "print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "9a9594da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "Contioue opearation done\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "Contioue opearation done\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=0\n",
+    "\n",
+    "while x<10:\n",
+    "    \n",
+    "    if x==5 or x==9:\n",
+    "        x+=1\n",
+    "        print('Contioue opearation done')\n",
+    "        continue\n",
+    "        \n",
+    "    print(x)\n",
+    "    x+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7b7ea155",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "My Favorite Number \n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "My Favorite Number \n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=0\n",
+    "\n",
+    "while x<11:\n",
+    "    \n",
+    "    if x==3 or x==7:\n",
+    "        x+=1\n",
+    "        print('My Favorite Number ')\n",
+    "        continue\n",
+    "    print(x)\n",
+    "    x+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a8159be4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "Skiped\n",
+      "Skiped\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=0\n",
+    "\n",
+    "while x<15:\n",
+    "    \n",
+    "    if x==5 or x==6:\n",
+    "        x+=1\n",
+    "        print('Skiped')\n",
+    "        continue\n",
+    "        \n",
+    "    print(x)\n",
+    "    x+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ec1e99f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "SKIPKED NUMBER\n",
+      "8\n",
+      "SKIPKED NUMBER\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=0\n",
+    "\n",
+    "while x<10:\n",
+    "    \n",
+    "    if x==9 or x==7:\n",
+    "        x+=1\n",
+    "        print('SKIPKED NUMBER')\n",
+    "        continue\n",
+    "    else:\n",
+    "        print(x)\n",
+    "        x+=1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7e2b15b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "SKIPKED NUMBER\n",
+      "8\n",
+      "SKIPKED NUMBER\n",
+      "The end loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=0\n",
+    "\n",
+    "while x<10:\n",
+    "    \n",
+    "    if x==9 or x==7:\n",
+    "        x+=1\n",
+    "        print('SKIPKED NUMBER')\n",
+    "        continue\n",
+    "\n",
+    "    print(x)\n",
+    "    x+=1\n",
+    "else:\n",
+    "    print('The end loop')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "396bf491",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#for i in range(10):\n",
+    "\n",
+    "for i in range(0,10,2):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "83b14353",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 a\n",
+      "1 b\n",
+      "1 c\n",
+      "1 d\n",
+      "2 a\n",
+      "2 b\n",
+      "2 c\n",
+      "2 d\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [1, 2]\n",
+    "list2 = ['a', 'b', 'c', 'd']\n",
+    "\n",
+    "for i in list1: \n",
+    "    for j in list2:\n",
+    "        print(i,j)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "50e05995",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 5, 7, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [1,2,3,4,5,6,7,8,9,10]\n",
+    "\n",
+    "x=2\n",
+    "\n",
+    "while x<len(list1):\n",
+    "    del list1[x]\n",
+    "    x+=2\n",
+    "    \n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "507630db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed every 3rd element from list : [1, 2, 4, 5, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# wrinting and removing every third element from a list\n",
+    "\n",
+    "my_list = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "\n",
+    "i = 2 \n",
+    "\n",
+    "while i < len(my_list):\n",
+    "    del my_list[i]\n",
+    "    i += 2 \n",
+    "\n",
+    "print(\"Removed every 3rd element from list :\",my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85294b44",
    "metadata": {},
    "outputs": [],
    "source": []
